--- a/docker-ci.yml
+++ b/docker-ci.yml
@@ -1,10 +1,24 @@
-name : Github Actions Demo
-run-name:${{github.actor}} is testing out Github Actions
-on:[push]
+name : Docker CI Pipeline
+run-name: ${{github.actor}} is running Docker CI Pipeline
+on: [push]
 jobs:
-   one-credit-session:
+   docker-ci-pipeline:
    runs-on : ubuntu-latest
    steps:
-       -name: learning commands
-        run:echo "docker cli commands"
+
+       -name : Checkout Repository
+        uses: actions/checkout@v4
+
+      
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+        
+       -name: Docker build
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/flask-hi .
+
+        -name: Docker push
+         run : docker push ${{ secrets.DOCKERHUB_USERNAME }}/flask-hi
         
